--- a/Dockerfile2
+++ b/Dockerfile2
@@ -1,28 +1,25 @@
-FROM node:12.9.1-slim
+FROM oraclelinux:7-slim
 
-RUN apt-get update && apt-get -y upgrade && apt-get -y dist-upgrade && apt-get install -y alien libaio1 unzip
-# Set to a non-root built-in user `node`
-#RUN usermod -aG sudo node
-USER node
+ARG release=19
+ARG update=5
 
-# Create app directory (with user `node`)
-RUN mkdir -p /home/node/app
+RUN yum -y install curl
+RUN curl --silent --location https://rpm.nodesource.com/setup_10.x | bash -
+RUN yum -y install nodejs
 
-WORKDIR /home/node/app
-# Bundle app source code
-COPY --chown=node . .
-RUN npm install --production
+RUN  yum -y install oracle-release-el7 && yum-config-manager --enable ol7_oracle_instantclient && \
+     yum -y install oracle-instantclient${release}.${update}-basic oracle-instantclient${release}.${update}-devel oracle-instantclient${release}.${update}-sqlplus && \
+     rm -rf /var/cache/yum
 
-RUN mkdir /home/node/oracle \
-&& unzip instantclient-basic-linux.x64-19.6.0.0.0dbru.zip -d /home/node/oracle
-ENV LD_LIBRARY_PATH=/home/node/oracle/instantclient_19_6:$LD_LIBRARY_PATH
 
-RUN rm -f oracle-instantclient19.6*
+RUN mkdir -p /app/alinmmaapis
+WORKDIR /app/alinmmaapis
+COPY package*.json /app/alinmmaapis/
+COPY . /app/alinmmaapis
+RUN npm install --only=production
 
-# Bind to all network interfaces so that it can be mapped to the host OS
-ENV HOST=0.0.0.0 PORT=3000
+# CMD ["sqlplus", "-v"]
 
-EXPOSE ${PORT}
-CMD [ "node", "." ]
+EXPOSE 3000
 
-# docker build -t migutak/alinmmaapis:v1 -f Dockerfile2 .
+CMD ["node","."]
